tests/valid/closure/capture_shared_ref.facet
fn main<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted () {
    let f = closure [r](x: unrestricted isize) -> unrestricted &'a unrestricted isize { r } in
    ()
}
