tests/invalid/borrow_error/unrestricted_mut_ref_local.facet
fn bad(mut x: unrestricted isize) -> unrestricted isize {
    let r: unrestricted &mut unrestricted isize = (&mut x) in
    (*r)
}
